--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -96,7 +96,6 @@
 
 @media (min-width: 500px) {
   .reason__features--bg-triangle {
-    padding-top: 35px;
     background-image: none;
   }
 }
@@ -112,7 +111,7 @@
       flex-direction: column;
       padding: 30px 0;
       width: 245px;
-      
+
       box-shadow: none;
 
       &:last-child {
@@ -132,10 +131,17 @@
 
   .reason__features {
     &--bg-triangle {
-      padding-top: 30px;
+      padding: 0;
     }
     &--right {
       order: 2;
+    }
+    &--bg {
+      padding: 0 30px;
+      padding-top: 40px;
+      min-height: 260px;
+
+      box-sizing: border-box;
     }
   }
 
@@ -172,6 +178,18 @@
   }
 }
 
+@media (min-width: 950px) and (max-width: 1199px) {
+  .reason__img {
+    width: 618px;
+  }
+
+  .reason__features {
+    &--bg {
+      width: 100%;
+    }
+  }
+}
+
 @media (min-width: $desktop-width) {
   .reason {
     &--bg-gray {
@@ -186,8 +204,7 @@
 
   .reason__features {
     &--bg {
-      width: 380px;
-      padding: 33px 73px;
+      min-width: 400px;
     }
   }
 }
