--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import "blocks/posts.scss";
 @import "blocks/heading.scss";
 @import "blocks/intro.scss";
+@import "blocks/logo.scss";
 @import "blocks/map.scss";
 @import "blocks/menu.scss";
 @import "blocks/popup-error.scss";
