--- a/src/sass/blocks/video-player.scss
+++ b/src/sass/blocks/video-player.scss
@@ -1,26 +1,11 @@
 .video-player {
   position: relative;
-
   width: 87%;
-  min-height: 45px;
+  height: 45px;
 
   background-color: rgba(0, 0, 0, 0.6);
-
-  &::after {
-    content: "";
-
-    position: absolute;
-    top: 44px;
-    left: 0;
-
-    display: block;
-    width: 100%;
-    min-height: 66px;
-
-    background-color: #f2f2f2;
-  }
+  border-bottom: 65px solid #f1f1f1;
 }
-
 
  .video-player__play-bar {
   padding-top: 22px;
@@ -31,7 +16,6 @@
 
 .video-player__time-line {
   position: relative;
-
   height: 3px;
   width: 84%;
   margin: 0 auto;
@@ -62,15 +46,13 @@
 
   &:hover {
     transform: scale(1.7);
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.8);
   }
 }
 
 .video-player__btn {
   position: absolute;
-  z-index: 1;
   top: 68px;
-
   height: 23px;
   padding: 0;
 
@@ -107,38 +89,46 @@
 
 @media (min-width: $tablet-width) {
   .video-player {
+    padding: 0;
     width: 100%;
-    padding: 24px 0;
+    min-height: 92px;
 
-    &:after {
-      display: none;
-    }
+    border: none;
   }
 
-  .video-player__time-line {
-    width: 60%;
-    margin-right: 25%;
+  .video-player__play-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-basis: 100%;
+    margin-top: 33px;
+    padding: 0 5%;
   }
 
   .video-player__btn {
-    top: 36px;
+    position: inherit;
   }
 
-  .video-player__btn-img,
   .video-player__btn-img {
     fill: #ffffff;
   }
 
-  .video-player__subtitles-btn {
-    right: 13%;
+  .video-player__time-line {
+    order: 2;
   }
 
   .video-player__replay-btn {
-    left: 5%;
+    order: 1;
+    margin-right: 15px;
+  }
+
+  .video-player__subtitles-btn {
+    order: 3;
+    margin: 0 20px;
   }
 
   .video-player__fullscreen-btn {
-    right: 5%;
+    order: 4;
   }
 }
 
