--- a/src/sass/blocks/btn.scss
+++ b/src/sass/blocks/btn.scss
@@ -4,7 +4,9 @@
   padding: 15px 0;
 
   text-align: center;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
+  font-weight: 700;
   line-height: 26px;
   color: #ffffff;
   text-transform: uppercase;
