--- a/src/sass/blocks/post.scss
+++ b/src/sass/blocks/post.scss
@@ -1,8 +1,7 @@
 .post {
+  padding: 0 6%;
   padding-top: 23px;
-  padding-bottom: 20px;
-  padding-left: 6%;
-  padding-right: 6%;
+  padding-bottom: 15px;
 
   text-align: center;
   border-top: 1px solid #e5e5e5;
@@ -14,13 +13,13 @@
 
 .post__img-wrapper {
   margin: 0;
+  margin-bottom: 16px;
 }
 
 .post__img {
   width: 280px;
   width: 100%;
   height: 280px;
-  margin-bottom: 10px;
 }
 
 .post__img-full {
@@ -35,6 +34,11 @@
   align-items: flex-start;
   width: auto;
   flex-basis: 320px;
+}
+
+.post__caption-wrapper {
+  margin-bottom: 5px;
+  text-align: left;
 }
 
 .post__subtitle {
@@ -63,7 +67,7 @@
   fill: #b2b2b2;
 }
 
-@media (min-width: 400px) and (max-width: 767px){
+@media (min-width: 450px) and (max-width: $mobile-width-only){
   .post__img {
     width: 400px;
   }
@@ -71,6 +75,10 @@
   .post__caption {
     display: block;
     margin: 0 auto;
+  }
+
+  .post__caption-wrapper {
+    text-align: center;
   }
 }
 
@@ -92,6 +100,13 @@
     &:last-child {
       border: none;
     }
+
+    &:not(:first-of-type) .post__caption {
+      padding-top: 13px;
+      padding-bottom: 15px;
+      padding-left: 7%;
+      padding-right: 9%;
+    }
   }
 
   .post__img {
@@ -99,6 +114,10 @@
     width: 324px;
     width: 100%;
     height: 267px;
+  }
+
+  .post__img-wrapper {
+    margin: 0;
   }
 
   .post__caption {
@@ -135,12 +154,17 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    padding: 13px 2%;
 
     color: #ffffff;
 
     background-color: rgba(0, 0, 0, 0.3);
 
     box-sizing: border-box;
+  }
+
+  .post__caption-wrapper {
+    margin: 0;
   }
 
   .post__like {
