--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -2,7 +2,7 @@
   text-align: center;
 
   &--bg-gray {
-    padding: 10px 35px;
+    padding: 11px 35px;
 
     box-shadow: 0 -1px 0 #d6d6d1;
   }
@@ -14,6 +14,7 @@
 
 .reason__title {
   position: relative;
+  margin-bottom: 10px;
 
 
   @include title();
@@ -44,6 +45,10 @@
   &--color {
     color: $secondary-text-color;
   }
+
+  &--margin {
+    margin-bottom: 29px;
+  }
 }
 
 .reason__img-wrapper {
@@ -60,7 +65,7 @@
 
 .reason__features {
   margin: 0;
-  padding: 28px 20px;
+  padding: 23px 20px;
 
   text-align: left;
 
@@ -72,7 +77,8 @@
   }
 
   &--bg-triangle {
-    padding-top: 65px;
+    margin-top: -10px;
+    padding-top: 60px;
 
     text-align: center;
 
@@ -82,20 +88,26 @@
   }
 }
 
+.reason__item:first-child {
+  padding-top: 16px;
+}
+
 .reason__item {
-  padding-top: 30px;
-  padding-left: 20%;
+  padding-left: 22%;
   padding-right: 25px;
 
   text-align: left;
 
   &:last-child {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
   }
 }
 
 @media (min-width: 500px) {
   .reason__features--bg-triangle {
+    margin-top: 0;
+    padding-top: 20px;
+
     background-image: none;
   }
 }
@@ -109,7 +121,8 @@
 
     &--bg-gray {
       flex-direction: column;
-      padding: 30px 0;
+      padding: 13px 0;
+      padding-bottom: 28px;
       width: 245px;
 
       box-shadow: none;
@@ -120,28 +133,56 @@
     }
   }
 
-  .reason__item {
-    max-width: 207px;
-    padding: 40px 3%;
-    padding-top: 120px;
+  .reason__offers {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: $tablet-width;
+    justify-content: space-around;
+    padding-top: 100px;
+    padding-bottom: 40px;
+  }
 
+  .reason__item {
+    min-width: 250px;
+    padding: 0;
+    margin-top: 30px;
     align-self: baseline;
     text-align: center;
+
+    &:first-child {
+      padding: 0;
+    }
+    &:last-child {
+      padding: 0;
+    }
+
+    &--houses {
+      order: 1;
+    }
+    &--souvenirs {
+      order: 3;
+    }
+    &--foods {
+      order: 2;
+    }
   }
 
   .reason__features {
     &--bg-triangle {
       padding: 0;
+      margin: 0;
     }
     &--right {
       order: 2;
     }
     &--bg {
-      padding: 0 30px;
-      padding-top: 40px;
-      min-height: 260px;
+    margin-top: 0;
+    padding: 0;
+    padding-top: 20px;
+    min-height: 260px;
+    min-width: 245px;
 
-      box-sizing: border-box;
+    box-sizing: border-box;
     }
   }
 
@@ -152,8 +193,11 @@
   }
 
   .reason__title {
-    padding: 0 15%;
-    margin-bottom: 0;
+    margin-top: 28px;
+    margin-bottom: 8px;
+    padding: 0 44px;
+
+    font-size: 21px;
 
     &:before {
       top: -100px;
@@ -163,10 +207,15 @@
   }
 
   .reason__text {
-    display: block;
-    margin: 0;
+    margin: 0 auto;
     margin-bottom: 20px;
     margin-top: 20px;
+    padding: 0 30px;
+    width: 190px;
+
+    &--number {
+      margin: 0;
+    }
   }
 
   .reason__wrapper {
@@ -178,9 +227,13 @@
   }
 }
 
-@media (min-width: 950px) and (max-width: 1199px) {
+@media (min-width: 950px) {
   .reason__img {
     width: 618px;
+  }
+
+  .reason__text {
+    min-width: 190px;
   }
 
   .reason__features {
@@ -200,11 +253,38 @@
   .reason__item {
     padding-left: 4%;
     padding-right: 4%;
+
+    &--souvenirs {
+      padding: 0;
+    }
   }
 
   .reason__features {
+
     &--bg {
-      min-width: 400px;
+    width: 600px;
+    padding-top: 22px;
     }
+  }
+
+  .reason__img {
+    width: 100%;
+  }
+
+  .reason__title {
+    padding: 0 100px;
+    margin-bottom: 12px;
+  }
+
+  .reason__text {
+    width: 260px;
+  }
+
+  .reason__offers {
+    padding-bottom: 62px;
+  }
+
+  .reason__wrapper {
+    padding-bottom: 12px;
   }
 }
