--- a/src/sass/blocks/search-form.scss
+++ b/src/sass/blocks/search-form.scss
@@ -1,7 +1,7 @@
 .search-form {
   margin: 0 auto;
   padding: 10px 5%;
-  padding-bottom: 40px;
+  padding-bottom: 50px;
   min-width: 280px;
   max-width: 400px;
 
@@ -15,10 +15,11 @@
 
 .search-form__text {
   @include text();
+  line-height: 24px;
 }
 
 .search-form__btn {
-  margin: 40px auto;
+  margin: 33px auto;
   margin-bottom: 0;
 
   font-weight: 700;
@@ -38,9 +39,14 @@
 
 @media (min-width: $tablet-width) {
   .search-form {
-    width: 450px;
-    padding-top: 45px;
+    max-width: 460px;
+    padding-top: 25px;
     padding-bottom: 60px;
+  }
+
+  .search-form__btn {
+    margin-top: 44px;
+    width: 100%;
   }
 
   .search-form__title {
@@ -50,7 +56,7 @@
 
 @media (min-width: $desktop-width) {
   .search-form {
-    padding-top: 45px;
+    padding-top: 30px;
     padding-bottom: 70px;
   }
 }
